fixed o-modal overflow

--- a/src/assets/css/octane.css
+++ b/src/assets/css/octane.css
@@ -53,7 +53,7 @@ o-view {
   display: block;
   z-index: 100;
   transform: translateX(0) translateY(0);
-  transition: transform 0.4s cubic-bezier(0.465, 0.183, 0.153, 0.946), opacity 0.3s cubic-bezier(0.465, 0.183, 0.153, 0.946); }
+  transition: transform 0.2s cubic-bezier(0.465, 0.183, 0.153, 0.946), opacity 0.2s cubic-bezier(0.465, 0.183, 0.153, 0.946); }
 
 o-control#translator {
   list-style: none;
@@ -146,6 +146,7 @@ o-modal-container {
   left: 0;
   pointer-events: none;
   overflow-y: hidden;
+  overflow-x: hidden;
   opacity: 0;
   will-change: opacity;
   transition: opacity 0.5s cubic-bezier(0.465, 0.183, 0.153, 0.946);
