--- a/src/modules/views/scss/_views.scss
+++ b/src/modules/views/scss/_views.scss
@@ -65,8 +65,8 @@ o-view {
     z-index:100;
     transform: translateX(0) translateY(0);
     transition: 
-        transform 0.4s cubic-bezier(0.465,0.183,0.153,0.946),
-        opacity 0.3s cubic-bezier(0.465,0.183,0.153,0.946);
+        transform 0.2s cubic-bezier(0.465,0.183,0.153,0.946),
+        opacity 0.2s cubic-bezier(0.465,0.183,0.153,0.946);
 }
 
   
